Fix dashboard layout visibility by adding top margin under header

--- a/src/components/DashboardLayout.css
+++ b/src/components/DashboardLayout.css
@@ -3,6 +3,7 @@
   height: 100%;
   min-height: 100vh;
   background: #f7f7f7;
+  margin-top: 70px;
 }
 
 .dashboard-sidebar {
